
24 July
1. A bug was caught by Michael Hoeft - the combo box (for search field) requires wxPython 2.8 -- So we had to shift a few things around. After a false start, I have created version 0.4.1 and am about to upload to the ftp site.

15 Sept 2009
1. Fixed a bug where fonts that are already installed would refuse to install again. It ignores OSError 17 now.
2. Added zip function -- zip all fonts in a pog(s) for easy distribution.
3. Moved to vers 0.4.2

16 Sept
1. Removed irritating message dialogs from zip function.
2. Removed pofiles directory from MANIFEST.in so they do not go into the tarball
3. There is a weird bug in the zip files -- when you unzip one there are odd files that want renaming... Not sure what this is yet.
4. Changed File menu to Tools menu.
5. Added error catch and report to zip.
6. Improved directory dialogue for zip.
7. Fixed help file and image.

18 Sept
Added reference counting to fonts that are shared/common among pogs: When a pog is uninstalled *and* another installed pog has the same font(s), those fonts are left installed.

19 Sept
1. A long day of tidying-up and abstracting the unicode/str stuff.
2. Gone a long way to a standard error approach. Still have some loose ends.

21 Sept
1. Adding icons for the various font items that are bad in some way.
2. Tweaking colours and effects to look better
3. Trying to get the widths of fitems to fit the middle panel. Kind of working, but not on first run.

22 Sept
1. Got a workaround for fitem widths going.
2. Improved the rendering of fitems under various conditions.
3. Removed fatfont.

22 Sept
1. Changed button on Check fonts form to 'Close' -- makes more sense now.

24 Sept
1. Major update of help file and graphics.
2. Trying to fancy-up the info label in the font-view. So far no luck.
3. Got the label going! Made a custom control.

25 Sept
1. Improved the drawing of fitmaps and gradients. Still have some precalcing of colours to do.
2. Tweaked the images and icons.
